fix: image too large

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,8 +60,12 @@ body {
 }
 
 #profile-image {
-    border-bottom: 4px solid #0d6efd;
     overflow: hidden;
+}
+
+#profile-image img{
+    border-bottom: 4px solid #0d6efd;
+    margin: auto;
 }
 
 @media (min-width: 992px) {
